JournalApp.Web/wwwroot/css/site.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;1,400;1,600&display=swap');

html {
    font-size: 16px;
    line-height:27px;
}

@media (min-width: 768px) {
  html {
    font-size: 18px;
    line-height:32px;
  }
}

html {
    position: relative;
    min-height: 100%;
}


html, body, td, div, ul, nav, li, a, button {
    font-family: 'Open Sans', sans-serif;
}

h1 {
    font-size:2.4rem;
    line-height:3rem;
    margin-bottom:0.6rem;
}

h2 {
    font-size: 1.8rem;
    line-height: 2.2rem;
    margin-bottom: 0.1rem;
    padding-bottom:0;   
}

h3 {
    font-size: 1.4rem;
    line-height: 1.8rem;
    margin-bottom: 0.1rem;
    padding-bottom: 0;
    margin-top:1.4rem;
}

body {
  margin:0;
  padding:0;
  color:#393939;
  background-color:#fcfcfc;
}

#manoirHeaderBar {
    display:block;
    border-bottom:solid 1px #dcdcdc;
    background:#ffffff;
}

    #manoirHeaderBar nav {
        position: fixed;
        visibility: hidden;
        height: calc(100% - 59px);
        padding: 10px 10px 0 0;
        width: 240px;
        border-right: solid 1px #efefef;
        z-index: 5;
        background: #ffffff;
        border-top: solid 1px #efefef;
    }

        #manoirHeaderBar nav {
            margin-left:-10px;
        }

            #manoirHeaderBar nav ul {
                padding: 0;
                margin: 0 0 0 14px;
                list-style-type: none;
                color: #393939
            }

    #manoirHeaderBar nav ul li {
        display:block;
        padding:16px 0 0 0;
    }

        #manoirHeaderBar nav ul li div {
            margin:-10px 0 0 0;
            padding:8px 8px 8px 12px;
            border-radius:8px;
            font-size:smaller;
        }

        #manoirHeaderBar nav ul li div.active {
            background:#004F7C;
            color:#efefef;
        }

            #manoirHeaderBar nav a {
        text-decoration:none;
        color:#393939;
        display:inline-block;
        text-overflow:ellipsis;
        white-space:nowrap;
        overflow:hidden;
        padding:0px 0 1px 0.6rem;
        vertical-align:text-bottom;
        
    }

        #manoirHeaderBar nav ul li .active a {
            color: #efefef;
        }


        #manoirHeaderBar nav a {

        }
         


        #manoirHeaderBar nav.opened {
            visibility: visible;
        }

    #manoirHeaderBar nav #navPublic {
        display:none;
    }

    #manoirHeaderBar nav.public #navPublic {
        display: block;
    }

    #manoirHeaderBar nav #navUser {
        display: none;
    }

    #manoirHeaderBar nav.user #navUser {
        display: block;
    }

    #manoirHeaderBar .header-bar {
        display: flex;
        flex-flow: row nowrap;
        height: 47px;
    }

    #manoirHeaderBar .breadCrumb {
        flex-grow: 1;
        padding: 10px;
        font-size: 20px;
    }

    #manoirHeaderBar .breadCrumb ul {
        margin:0;
        list-style-type:none;
        padding:0;
    }

    #manoirHeaderBar .breadCrumb li {
        display:inline-block;
        color:#898989;
    }

    #manoirHeaderBar button {
        border: none;
        background: transparent;
        cursor: pointer;
    }

    #manoirHeaderBar button.journal-button {
        font-size: 18px;
        background: #004F7C;
        padding: 4px 10px 0px 10px;
        color: white;
    }

    #manoirHeaderBar button.login-button {
        width:160px;
        display:inline-block;
    }

    #manoirHeaderBar .button-switch-page-type {
        display:block;
        width:100%;
        position:absolute;
        height:60px;
        top:calc(100% - 60px);
        left:0;
        background:#efefef;
        text-align:center;
        text-transform:uppercase;
        font-weight:600;
        color:#494949;
    }

    main article {
        padding: 0 24px;
        max-width: 768px;
        margin: auto;
    }

